# Master-Informatica

./: .gitignore  README.md
Besturingssystemen III/: Examenvragen Besturingssystemen III.docx  samenvatting.tex  template.aux  template.toc  ~$amenvragen Besturingssystemen III.docx
Besturingssystemen III/Examen/: examen.tex
Besturingssystemen III/Examen/Examen LDAP/: Examen LDAP 24 januari 2019.tex
Besturingssystemen III/Examen/Examen WMI/: Examen WMI 23 november 2018.tex
Besturingssystemen III/Examen/tex/: vraag1.tex  vraag2.tex
Besturingssystemen III/Labo/: powershell.ps1
Besturingssystemen III/Labo/AD/: ad.tex
Besturingssystemen III/Labo/LDAP/: ldap.pl  reeks6.pl  reeks7.pl
Besturingssystemen III/Labo/Reeks 1 - OLE Automation/: 10.pl  2.pl  4.pl  8.pl
Besturingssystemen III/Labo/Reeks 2 - Excel Object Model/: 1.pl  2.pl  (+7 more)
Besturingssystemen III/Samenvatting/: samenvatting.tex
Besturingssystemen III/Test/: ProcessInitialisatie.xlsx  Test WMI 23 november 2018.tex
Besturingssystemen III/Theorie/: wmi.ppsx
Beveiliging van netwerken en computers/: samenvatting.tex
Beveiliging van netwerken en computers/Examen/: examen.tex
Beveiliging van netwerken en computers/Labo/: Minerva.htm  uitwerking labos.tex
Beveiliging van netwerken en computers/Samenvatting/: IPSec & VPN.md  samenvatting.tex
Beveiliging van netwerken en computers/Test/: cheatsheet.tex
Beveiliging van netwerken en computers/Theorie/: Beveiliging_-_2018-2019_-_appendix_-_Examen.ppt  theorie.tex
Compilers/: samenvatting.tex
Compilers/Samenvatting/: samenvatting.tex
Computergrafiek/: Examenvragen Computergrafiek.docx  samenvatting.tex
Computergrafiek/Examen/: examen.tex  samenvatting.tex
Computergrafiek/Samenvatting/: samenvatting.tex
Computergrafiek/Slides/: 1. Rastering.ppsx  3a. Lagrange & Hermite interpolatie.ppsx  3b. Bézier splines.ppsx  3c Polynomiale B-splines.ppsx  5. Wavelet transformaties.ppsx
Computervisie/: samenvatting.tex
Computervisie/Samenvatting/: samenvatting.tex
Gedistribueerde toepassingen/: samenvatting.tex
Gedistribueerde toepassingen/Samenvatting/: samenvatting.tex
Gevorderde algoritmen/: efficiënte_zoekbomen.md  samenvatting.tex
Gevorderde algoritmen/Samenvatting/: dot2png.bat  meerdimensionale_gegevensstructuren.md  samenvatting.tex  toepassingen_dynamisch_programmeren.md
Kunstmatige intelligentie/: samenvatting.tex
Kunstmatige intelligentie/Samenvatting/: samenvatting.tex
Masterproef/: werkplan.docx
Masterproef/inleidend verslag/: verslag.tex
Masterproef/publicaties/: publicaties.tex
Masterproef/werkplan/: verslag.tex  werkplan.docx
Semester I/Systeemontwerp/: cheatsheet.docx
Semester I/Xandro_apart/: Notities BS3.docx  Notities beveiliging labo.docx  Notities beveiling.docx  Systeemontwerp labo notities.docx  labo iptables.txt  labo pam.txt  labo sendmail.txt  samenvatting IPSec.docx  samenvatting firewalls.docx  samenvatting ssh.docx
Semester II/Compilers/Labo/2. Parser/parser_files/: CMakeLists.txt  cheetah  control_flow.dot  dummy.dot  fibonacci.dot  function_call.dot  lexer.cpp  literals.dot  make_tarball.sh  one_line_conditionals.dot  operators.dot  parser.cpp  parser.hpp  src2tree.sh  stack.hh
Semester II/Compilers/Labo/2. Parser/parser_files/src/: ast.hpp  auxiliary.cpp  auxiliary.hpp  driver.cpp  driver.hpp  lexer.l  main.cpp  parser.y
Semester II/Compilers/Labo/2. Parser/parser_files/src/ast/: decl.hpp  dump.cpp  expr.cpp  expr.hpp  loc.cpp  stmt.hpp
Semester II/Compilers/Labo/2. Parser/parser_files/src/sema/: semadecl.cpp  semaexpr.cpp  sematype.cpp
Semester II/Compilers/Labo/2. Parser/parser_files/test/: control_flow.c  dummy.c  function_call.c  literals.c  one_line_conditionals.c  operators.c
Semester II/Kunstmatige intelligentie/: AI.docx
Semester II/Masterproef/: README.md  voorstel.docx
Systeemontwerp/: cheatsheet.docx  samenvatting.tex
Systeemontwerp/Samenvatting/: samenvatting.tex
Xandro_apart/: Notities BS3.docx  Notities Labo.docx  Notities beveiling.docx  Systeemontwerp labo notities.docx  Systeemontwerp notities.docx  labo pgp not.docx  samenvatting IPSec.docx  samenvatting key exchange.docx  samenvatting wep.docx  ssh.docx
(+1441 files in other folders)
